# scheduler

./: .gitignore  pyproject.toml
src/scheduler/: .env  __main__.py  app.py  settings.py
src/scheduler/api/: __init__.py  auth.py  tasks.py
src/scheduler/models/: tasks.py
src/scheduler/services/: auth.py  tasks.py
src/scheduler/sql_app/: database.py  sql_app.db  tables.py
