[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Nuri <nurhotun95@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.17.5"
fastapi = "^0.75.0"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.32"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
